--- a/app/views/categories/show.html.slim
+++ b/app/views/categories/show.html.slim
@@ -4,6 +4,6 @@ table
   - @category.posts.each do |post|
     tr
       td
-        = link_to "#{post.title}", post_path(post), class: 'btn btn-sm btn-info'
+        = link_to "#{post.title}", category_post_path(post), class: 'btn btn-sm btn-info'
 
 = link_to 'Back', :root, class: 'btn btn-sm btn-primary'
