--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -9,6 +9,9 @@ h2
     = f.label :surname
     = f.text_field :surname
   .field
+    = f.label :description
+    = f.text_area :description, rows: 10, cols: 60
+  .field
     = f.label :email
     br/
     = f.email_field :email, autofocus: true, autocomplete: "email"
@@ -34,7 +37,6 @@ h2
     = f.password_field :current_password, autocomplete: "current-password"
   .actions
     = f.submit "Update"
-h3 Delete my account
-p
-  | Unhappy? #{button_to "Delete account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete }
+= link_to 'Log Out', destroy_user_session_path, class: 'btn btn-sm btn-warning', method: :delete
+'
 = link_to "Back", :back, class: 'btn btn-sm btn-primary'
