--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -28,4 +28,4 @@
         .col-md-1
           = link_to 'Home', root_path, class: 'btn btn-sm btn-info'
         .col-md-1
-          = link_to 'Sign up', user_session_path, class: 'btn btn-sm btn-info'
+          = link_to 'Sign In', user_session_path, class: 'btn btn-sm btn-info'
