--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -29,5 +29,5 @@ p
   '
   = link_to 'Log Out', destroy_user_session_path, class: 'btn btn-sm btn-warning', method: :delete
 - if can? :destroy, @user
-  = link_to 'Delete User', @user, method: :delete, class: 'btn btn-sm btn-danger', data: { confirm: 'Are you sure?' }
+  = link_to 'Delete User', destroy_user_path, method: :delete, class: 'btn btn-sm btn-danger', data: { confirm: 'Are you sure?' }
 = link_to 'Back', :back, class: 'btn btn-sm btn-primary'
